@@ -1,0 +1,49 @@
+/*
+ * Copyright 2011 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *        http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package com.jayway.restassured.itest.java;
+
+import com.jayway.restassured.itest.java.support.WithJetty;
+import org.junit.Test;
+
+import static com.jayway.restassured.RestAssured.given;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.is;
+
+public class RedirectITest extends WithJetty {
+
+    @Test
+    public void followsRedirectsByDefault() throws Exception {
+        given().
+                param("url", "/hello").
+        expect().
+                body("hello", equalTo("Hello Scalatra")).
+        when().
+                get("/redirect");
+    }
+
+    @Test
+    public void doesntFollowRedirectsIfExplicitlySpecified() throws Exception {
+        given().
+                redirects().follow(false).
+                param("url", "/hello").
+        expect().
+                statusCode(302).
+                header("Location", is("http://localhost:8080/hello")).
+        when().
+                get("/redirect");
+    }
+}
